Changelog
=========


2.4.2 (unreleased)
------------------

- Overview: Made download copy link conditionally.
  [phgross]


2.4.1 (2012-11-28)
------------------

- Let EditCheckerView works for all document types, also for mails.
  [phgross]


2.4 (2012-11-28)
----------------

- Implements editchecker wrapper view, used in extendend tooltip.
  [phgross]

- Fixed fallback tab for redirecting in doucment_editing view.
  [phgross]

- Implements document overview rebuild (file display,
  download links and confirmation).
  [phgross]

- Dropped Plone 4.1 compatibility. Only 4.2 and up are supported.
  [lgraf]

- Adjust javscripts: Use $ instead of deprecated jq.
  [phgross]


2.3.2 (2012-09-25)
------------------

- Updated vdexvocabs.
  [tschanzt]


2.3.1 (2012-09-12)
------------------

- Document overview: Changed file representation (using icons as download links).
  [phgross]

- Adjust french translations.
  [phgross]

- Activate temporary disabled browse functionality in the contenttree widget.
  [phgross]


2.3 (2012-06-25)
----------------

- Added some more MIME type definitions
  [lgraf]

2.2 (2012-06-22)
----------------

- Updated mimetypes added dynamically to python mimetypes map
  [lgraf]

2.1 (2012-06-21)
----------------

- Adding mimetype for MindManager mindmap files to python mimetypes map
  [lgraf]

- Implements Custom InitialVersion Message functionality used in og.task.
  Issue #1494 Mandantenuebergreifende ZA: Initialversion ersetzten mit spezifischerem Kommentar
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1494
  [phgross]

- Remove unused mailing.py module.
  [eschmutz]

- Add logout overlay to show all checked out documents of the current user
  Issue #1501 Warnung "Bitte Dokumente einchecken"
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1501/

- Adjust redirecting in the checkin views, consider also documents in tasks.