@@ -1,10 +1,14 @@
+from AccessControl.SecurityManagement import getSecurityManager
+from AccessControl.SecurityManagement import newSecurityManager
+from AccessControl.SecurityManagement import setSecurityManager
 from ftw.testing import MockTestCase
 from opengever.document.checkout.manager import CHECKIN_CHECKOUT_ANNOTATIONS_KEY
 from opengever.document.interfaces import ICheckinCheckoutManager
 from opengever.document.testing import OPENGEVER_DOCUMENT_FUNCTIONAL_TESTING
+from plone.app.testing import setRoles
 from plone.app.testing import TEST_USER_ID, TEST_USER_NAME
 from plone.app.testing import TEST_USER_PASSWORD, login
-from plone.app.testing import setRoles
+from plone.locking.interfaces import IRefreshableLockable
 from plone.namedfile.file import NamedBlobFile
 from plone.testing.z2 import Browser
 from zope.annotation.interfaces import IAnnotations
@@ -28,6 +32,9 @@ class TestDocumentOverview(MockTestCase):
         super(TestDocumentOverview, self).setUp()
         self.portal = self.layer['portal']
         setRoles(self.portal, TEST_USER_ID, ['Manager'])
+
+        # Create a second user to test locking and checkout
+        self.portal.acl_users.userFolderAddUser('other_user', 'secret', ['Member'], [])
 
         self.browser = Browser(self.layer['app'])
         self.browser.handleErrors = False
@@ -59,6 +66,12 @@ class TestDocumentOverview(MockTestCase):
         self.document3 = self.portal.get('document-3')
         self._set_default_values(self.document3)
         IAnnotations(self.document3)[CHECKIN_CHECKOUT_ANNOTATIONS_KEY] = 'hugo.boss'
+
+        # document4 (will later be locked by hugo.boss)
+        self.portal.invokeFactory(
+            'opengever.document.document', 'document-4', title=u'document4')
+        self.document4 = self.portal.get('document-4')
+        self._set_default_values(self.document4)
 
         transaction.commit()
 
@@ -123,3 +136,28 @@ class TestDocumentOverview(MockTestCase):
 
         inactive_copy_download_link = """<span class="function-download-copy-inactive link-overlay discreet">Download copy</span>"""
         self.assertTrue(inactive_copy_download_link in self.browser.contents)
+
+    def test_checkout_when_locked(self):
+        """Test that it's not possible to check out the document if its locked
+        by another user.
+        """
+        old_sm = getSecurityManager()
+
+        # Change security context to 'other_user' to lock the document
+        user = self.portal.acl_users.getUser('other_user')
+        user = user.__of__(self.portal.acl_users)
+        newSecurityManager(self.portal, user)
+
+        # Let user 'other_user' lock the document
+        lockable = IRefreshableLockable(self.document4)
+        lockable.lock()
+
+        # Restore previous security context (test_user_1)
+        setSecurityManager(old_sm)
+        transaction.commit()
+
+        self.browser.open(
+            '%s/tabbedview_view-overview' % self.document4.absolute_url())
+
+        # Editing the document shouldn't be possible
+        self.assertNotIn('editing_document', self.browser.contents)
